--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    
     <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <header class="hero">
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil começa em 10d 12h 20m 15s
+                O maior evento de tecnologia do Brasil começa em <span id="contador"></span>
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
@@ -40,6 +40,52 @@
         </div>
     </header>
 
+    <section class="event event--frontend">
+        <div class="container" data-aos="fade-rigth">
+            <div class="event__details">
+                <h2 class="event__details__title">Front-end</h2>
+                <p class="event__details__description">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae porro neque odit praesentium fuga! Sunt animi officia, obcaecati earum, cumque iusto facere in nulla optio, non dicta suscipit atque ut.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="event event--ui-ux event--image-left">
+        <div class="container" data-aos="fade-lefth">
+            <div class="event__details">
+                <h2 class="event__details__title">UI/UX</h2>
+                <p class="event__details__description">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae porro neque odit praesentium fuga! Sunt animi officia, obcaecati earum, cumque iusto facere in nulla optio, non dicta suscipit atque ut.
+                </p>
+            </div>
+            <img class="event__image" src="./images/ui-ux.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="event event--data-science">
+        <div class="container" data-aos="fade-rigth">
+            <div class="event__details">
+                <h2 class="event__details__title">Data Sciense</h2>
+                <p class="event__details__description">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae porro neque odit praesentium fuga! Sunt animi officia, obcaecati earum, cumque iusto facere in nulla optio, non dicta suscipit atque ut.
+                </p>
+            </div>
+            <img class="event__image" src="./images/data.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="event event--backend event--image-left">
+        <div class="container" data-aos="fade-lefth">
+            <div class="event__details">
+                <h2 class="event__details__title">Back-End</h2>
+                <p class="event__details__description">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae porro neque odit praesentium fuga! Sunt animi officia, obcaecati earum, cumque iusto facere in nulla optio, non dicta suscipit atque ut.
+                </p>
+            </div>
+            <img class="event__image" src="./images/backend.png" alt="Front-end">
+        </div>
+    </section>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
